--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,8 +9,8 @@
   "d1_databases": [
     {
       "binding": "DB",
-      "database_name": "your-database-name",
-      "database_id": "your-database-id",
+      "database_name": "ttugttag-i",
+      "database_id": "411fb97e-f6a5-48bc-9d87-3613ebe601e2",
       "migrations_dir": "drizzle"
     }
   ]
