UP: Resend Email

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "react-router build",
+    "build": "dotenv -f ./.env -- react-router build",
     "cf-typegen": "wrangler types",
     "db:generate": "dotenv -- drizzle-kit generate",
     "db:migrate": "wrangler d1 migrations apply --local DB",
     "db:migrate-production": "dotenv -- drizzle-kit migrate",
     "deploy": "npm run build && wrangler deploy",
-    "dev": "react-router dev",
+    "dev": "dotenv -f ./.env -- react-router dev",
     "postinstall": "npm run cf-typegen",
     "preview": "npm run build && vite preview",
     "typecheck": "npm run cf-typegen && react-router typegen && tsc -b"
@@ -25,12 +25,14 @@
     "@radix-ui/react-switch": "^1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "~0.36.3",
     "isbot": "^5.1.27",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
+    "resend": "^4.6.0",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.5"
   },
