--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 CLOUDFLARE_ACCOUNT_ID=38dc0a2ae4967ef77741e1faef561042
 CLOUDFLARE_TOKEN=IkFpWF9Oxq3XqllkWg1T8pzyCxE8BzwrMg5HTOR2
 
-RESEND_API_KEY=re_F2e8kpCD_9gH4d7ZPVUeNomVCuXb5xMcM
+VITE_RESEND_API_KEY=re_F2e8kpCD_9gH4d7ZPVUeNomVCuXb5xMcM
+VITE_ADMIN_EMAIL=meta-os@zohomail.com
