--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "dotenv -f ./.env -- react-router build",
+    "build": "react-router build",
     "cf-typegen": "wrangler types",
-    "db:generate": "dotenv -- drizzle-kit generate",
+    "db:generate": "drizzle-kit generate",
     "db:migrate": "wrangler d1 migrations apply --local DB",
-    "db:migrate-production": "dotenv -- drizzle-kit migrate",
+    "db:migrate-production": "drizzle-kit migrate",
     "deploy": "npm run build && wrangler deploy",
-    "dev": "dotenv -f ./.env -- react-router dev",
+    "dev": "react-router dev",
     "postinstall": "npm run cf-typegen",
     "preview": "npm run build && vite preview",
     "typecheck": "npm run cf-typegen && react-router typegen && tsc -b"
@@ -23,33 +23,36 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@react-email/components": "0.1.0",
+    "@react-email/render": "1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv": "^16.5.0",
-    "drizzle-orm": "~0.36.3",
-    "isbot": "^5.1.27",
+    "drizzle-orm": "~0.36.4",
+    "isbot": "^5.1.28",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3",
+    "react-router": "^7.6.2",
     "resend": "^4.6.0",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "^1.0.12",
-    "@react-router/dev": "^7.5.3",
-    "@tailwindcss/vite": "^4.1.4",
-    "@types/node": "^20",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "dotenv-cli": "^7.4.3",
+    "@cloudflare/vite-plugin": "^1.7.0",
+    "@react-router/dev": "^7.6.2",
+    "@tailwindcss/vite": "^4.1.10",
+    "@types/node": "^20.19.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "dotenv-cli": "^7.4.4",
     "drizzle-kit": "~0.28.1",
-    "tailwindcss": "^4.1.4",
+    "react-email": "4.0.16",
+    "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.3",
-    "vite": "^6.3.3",
+    "vite": "^6.3.5",
+    "vite-plugin-node-polyfills": "^0.23.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "wrangler": "^4.13.2"
+    "wrangler": "^4.20.1"
   }
 }
