UP: add Sentry, Cleak

--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
 CLOUDFLARE_ACCOUNT_ID=38dc0a2ae4967ef77741e1faef561042
 CLOUDFLARE_TOKEN=IkFpWF9Oxq3XqllkWg1T8pzyCxE8BzwrMg5HTOR2
 
+//Resend (email)
 VITE_RESEND_API_KEY=re_F2e8kpCD_9gH4d7ZPVUeNomVCuXb5xMcM
 VITE_ADMIN_EMAIL=meta-os@zohomail.com
+
+//Clerk (Auth)
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_aW4tYXNwLTk2LmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_j3hCyKQD0DCNjdFuPb422tlLv4QaMGGC4n7a8Q3SO6
