--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "typecheck": "npm run cf-typegen && react-router typegen && tsc -b"
   },
   "dependencies": {
+    "@clerk/localizations": "^3.16.5",
+    "@clerk/react-router": "^1.6.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -25,6 +27,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@react-email/components": "0.1.0",
     "@react-email/render": "1.1.2",
+    "@sentry/react-router": "^9.30.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "~0.36.4",
