--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "db:migrate": "wrangler d1 migrations apply --local DB",
     "db:migrate-production": "drizzle-kit migrate",
     "deploy": "npm run build && wrangler deploy",
-    "dev": "react-router dev",
+    "dev": "NODE_OPTIONS='--import ./instrumentation.server.mjs' react-router dev",
     "postinstall": "npm run cf-typegen",
     "preview": "npm run build && vite preview",
     "typecheck": "npm run cf-typegen && react-router typegen && tsc -b"
   },
   "dependencies": {
-    "@clerk/localizations": "^3.16.5",
-    "@clerk/react-router": "^1.6.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -27,17 +25,20 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@react-email/components": "0.1.0",
     "@react-email/render": "1.1.2",
-    "@sentry/react-router": "^9.30.0",
+    "@tldraw/sync": "^3.13.1",
+    "@types/lodash.capitalize": "^4.2.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "~0.36.4",
     "isbot": "^5.1.28",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.2",
     "resend": "^4.6.0",
     "tailwind-merge": "^3.3.1",
+    "tldraw": "^3.13.1",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
