--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.7.0",
+    "@sentry/vite-plugin": "^3.5.0",
     "@react-router/dev": "^7.6.2",
     "@tailwindcss/vite": "^4.1.10",
     "@types/node": "^20.19.1",
