--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-email/components": "0.1.0",
     "@react-email/render": "1.1.2",
     "@sentry/react-router": "^9.30.0",
+    "@tldraw/assets": "^3.13.1",
     "@tldraw/sync": "^3.13.1",
     "@types/lodash.capitalize": "^4.2.9",
     "class-variance-authority": "^0.7.1",
