--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "@types/lodash.capitalize": "^4.2.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "~0.36.4",
+    "drizzle-orm": "^0.44.2",
     "isbot": "^5.1.28",
     "lodash": "^4.17.21",
     "lucide-react": "^0.515.0",
+    "miniflare": "^4.20250617.3",
+    "nanoid": "^5.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.2",
@@ -47,14 +49,14 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.7.0",
-    "@sentry/vite-plugin": "^3.5.0",
     "@react-router/dev": "^7.6.2",
+    "@sentry/vite-plugin": "^3.5.0",
     "@tailwindcss/vite": "^4.1.10",
     "@types/node": "^20.19.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "dotenv-cli": "^7.4.4",
-    "drizzle-kit": "~0.28.1",
+    "drizzle-kit": "^0.31.1",
     "react-email": "4.0.16",
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.4",
@@ -62,6 +64,6 @@
     "vite": "^6.3.5",
     "vite-plugin-node-polyfills": "^0.23.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "wrangler": "^4.20.1"
+    "wrangler": "^4.20.5"
   }
 }
